fix nav bar expanders not clickable on small mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -178,3 +178,7 @@ g.axis {
     left:2px;
     min-width:42px;"
 }
+
+li.open {
+    min-height: 25%;
+}
